@@ -1,4 +1,8 @@
 2004-07-22 Scott Dattalo <scott@dattalo.com>
+	* src/stimuli.cc, modules/resistor.cc, modules/resistor.h:
+	Bug fixes to the recent I/O pin redesign
+	
+2004-07-22 Scott Dattalo <scott@dattalo.com>
 	* src/14bit-tmrs.cc, src/breakpoints.cc, src/breakpoints.h, 
 	src/i2c-ee.cc, src/ioports.cc, src/ioports.h, src/p16x7x.cc,
 	src/p16x7x.h, src/packages.cc, src/pic-processor.h, src/processor.cc,
